Prevent sign extension for pointer trace values

This makes 32-bit pointers serialize like "0xdeadbeef", not
"0xffffffffdeadbeef".

BUG=618221

Review-Url: https://codereview.chromium.org/2043233003
Cr-Commit-Position: refs/heads/master@{#399347}

Former-commit-id: e853dea3b3213b3736f0fa2f36aa8ae05950edf9